--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -1,5 +1,17 @@
 /********** GENERAL **********/
 
+body
+  margin: 0
+  padding: 0
+
+:root
+  --light-green: #99E2D0
+  --dark-green: #008766
+  --light-blue: #89C8FA
+  --dark-blue: #003A68
+  --purple: #9356DC
+  --font-title: 'Shrikhand', serif
+
 .explorer__title,
 .fonctionnement__title,
 .restaurants__title
@@ -16,6 +28,46 @@
   text-decoration: none
 
 /********** FIN GENERAL **********/
+
+/********** LOADER **********/
+
+.loader__container
+  position: fixed
+  inset: 0
+  animation: loader__container--keyframes 2s ease 3s forwards
+
+.site__content
+  opacity: 0
+  animation: site__content--keyframes 1s ease 3s forwards
+
+.loader
+  position: absolute
+  width: 100%
+  height: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
+
+.loader__svg
+  stroke-dasharray: 500
+  stroke-dashoffset: 1000
+  animation: loader__svg--keyframes 5s infinite linear forwards
+
+@keyframes loader__container--keyframes
+  to
+    opacity: 0
+    visibility: hidden
+
+@keyframes site__content--keyframes
+  to
+    opacity: 1
+
+@keyframes loader__svg--keyframes
+  to
+    stroke-dashoffset: 0
+
+/********** FIN LOADER **********/
 
 /********** HEADER **********/
 
@@ -51,7 +103,7 @@ header
       z-index: 1
 
     &__title
-      font-family: Shrikhand
+      font-family: var(--font-title)
       font-size: 30px
       font-weight: 400
       color: #101010
@@ -342,7 +394,7 @@ footer
 
   .footer
     &__title
-      font-family: Shrikhand
+      font-family: var(--font-title)
       height: 27px
       font-size: 18px
       font-weight: 400
