--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -1,9 +1,5 @@
 /********** GENERAL **********/
 
-body
-  margin: 0
-  padding: 0
-
 :root
   --light-green: #99E2D0
   --dark-green: #008766
@@ -31,41 +27,41 @@ body
 
 /********** LOADER **********/
 
-.loader__container
-  position: fixed
-  inset: 0
-  animation: loader__container--keyframes 2s ease 3s forwards
+// .loader__container
+//   position: fixed
+//   inset: 0
+//   animation: loader__container--keyframes 2s ease 3s forwards
 
-.site__content
-  opacity: 0
-  animation: site__content--keyframes 1s ease 3s forwards
+// .site__content
+//   opacity: 0
+//   animation: site__content--keyframes 1s ease 3s forwards
 
-.loader
-  position: absolute
-  width: 100%
-  height: 100%
-  display: flex
-  justify-content: center
-  align-items: center
-  background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
+// .loader
+//   position: absolute
+//   width: 100%
+//   height: 100%
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
 
-.loader__svg
-  stroke-dasharray: 500
-  stroke-dashoffset: 1000
-  animation: loader__svg--keyframes 5s infinite linear forwards
+// .loader__svg
+//   stroke-dasharray: 500
+//   stroke-dashoffset: 1000
+//   animation: loader__svg--keyframes 5s infinite linear forwards
 
-@keyframes loader__container--keyframes
-  to
-    opacity: 0
-    visibility: hidden
+// @keyframes loader__container--keyframes
+//   to
+//     opacity: 0
+//     visibility: hidden
 
-@keyframes site__content--keyframes
-  to
-    opacity: 1
+// @keyframes site__content--keyframes
+//   to
+//     opacity: 1
 
-@keyframes loader__svg--keyframes
-  to
-    stroke-dashoffset: 0
+// @keyframes loader__svg--keyframes
+//   to
+//     stroke-dashoffset: 0
 
 /********** FIN LOADER **********/
 
@@ -440,3 +436,73 @@ footer
         font-size: 16px
 
 /********** FIN FOOTER **********/
+
+/********** MEDIA QUERIES **********/
+
+/* TABLET */
+
+@media (min-width: 768px) and (max-width: 1024px)
+  header
+    .header
+      &__maintitle
+        height: 96px
+        box-shadow: none
+
+      &__title
+        font-size: 34.2px
+      
+      &__form
+        box-shadow: none
+
+  .explorer
+    height: 179px
+    padding: 30px 0
+    gap: 18px
+
+    &__title
+      font-size: 40px
+      width: 100%
+      height: 47px
+      margin: 0
+  
+    &__p
+      width: 100%
+      height: 46px
+      display: flex
+      justify-content: center
+      align-items: center
+    
+    &__button
+      margin: 0
+  
+  .fonctionnement
+    height: auto
+    padding-bottom: 50px
+
+    &__title
+      padding-top: 50px
+
+    ol
+      padding-right: 32px
+
+    li
+      width: auto
+    
+    &__button
+      width: 100%
+  
+  .restaurants
+    &__title
+      padding-top: 30px
+
+
+/* DESKTOP */
+
+  // .fonctionnement
+  //   height: 228.38px
+
+  //   ol
+  //     flex-direction: row
+  //     gap: calc(24px + 12px)
+
+/********** FIN MEDIA QUERIES **********/
