--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -16,7 +16,6 @@
   color: black
 
 .section__title
-  padding-left: 20px
   margin: 0
 
 .restaurants__link,
@@ -27,41 +26,41 @@
 
 /********** LOADER **********/
 
-.loader__container
-  position: fixed
-  inset: 0
-  animation: loader__container--keyframes 2s ease 3s forwards
+// .loader__container
+//   position: fixed
+//   inset: 0
+//   animation: loader__container--keyframes 2s ease 3s forwards
 
-.site__content
-  opacity: 0
-  animation: site__content--keyframes 1s ease 3s forwards
+// .site__content
+//   opacity: 0
+//   animation: site__content--keyframes 1s ease 3s forwards
 
-.loader
-  position: absolute
-  width: 100%
-  height: 100%
-  display: flex
-  justify-content: center
-  align-items: center
-  background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
+// .loader
+//   position: absolute
+//   width: 100%
+//   height: 100%
+//   display: flex
+//   justify-content: center
+//   align-items: center
+//   background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
 
-.loader__svg
-  stroke-dasharray: 500
-  stroke-dashoffset: 1000
-  animation: loader__svg--keyframes 5s infinite linear forwards
+// .loader__svg
+//   stroke-dasharray: 500
+//   stroke-dashoffset: 1000
+//   animation: loader__svg--keyframes 5s infinite linear forwards
 
-@keyframes loader__container--keyframes
-  to
-    opacity: 0
-    visibility: hidden
+// @keyframes loader__container--keyframes
+//   to
+//     opacity: 0
+//     visibility: hidden
 
-@keyframes site__content--keyframes
-  to
-    opacity: 1
+// @keyframes site__content--keyframes
+//   to
+//     opacity: 1
 
-@keyframes loader__svg--keyframes
-  to
-    stroke-dashoffset: 0
+// @keyframes loader__svg--keyframes
+//   to
+//     stroke-dashoffset: 0
 
 /********** FIN LOADER **********/
 
@@ -166,10 +165,14 @@ header
 .fonctionnement
   height: 440px
   background-color: white
+  display: flex
+  justify-content: center
 
   &__title
     padding-top: calc(448px - 400px)
     padding-bottom: 26px
+    align-self: flex-start
+    padding-left: 20px
 
   ol
     display: flex
@@ -178,7 +181,7 @@ header
     margin: 0
     list-style: none
     counter-reset: li
-    padding-left: calc(((375px - 335px) / 2) + 12px)
+    padding-left: calc(20px + (24px / 2))
 
   li
     width: 335px
@@ -232,6 +235,11 @@ header
       color: var(--primary-color)
       font-size: 17.91px
 
+.sub-fonctionnement
+  display: flex
+  flex-direction: column
+  align-items: center
+
 /********** FIN SECTION FONCTIONNEMENT **********/
 
 /********** SECTION RESTAURANTS **********/
@@ -246,7 +254,7 @@ header
   &__title
     padding-top: calc(894px - 440px - 400px)
     padding-bottom: calc(942px - 894px - 24px)
-    align-self: stretch
+    align-self: flex-start
 
   &__allcards
     width: 340px
@@ -364,6 +372,11 @@ header
     #restaurants__svg--gradient3,
     #restaurants__svg--gradient4
       rotate: 90deg
+
+.sub-restaurants
+  display: flex
+  flex-direction: column
+  align-items: center
     
 @keyframes svg__keyframes--full
   0%
@@ -442,7 +455,7 @@ footer
 
 /* TABLET */
 
-@media (min-width: 768px) and (max-width: 1024px)
+@media (min-width: 768px)
   header
     .header
       &__maintitle
@@ -533,11 +546,34 @@ footer
 
 /* DESKTOP */
 
-  // .fonctionnement
-  //   height: 228.38px
+@media (min-width: 1025px) and (max-width: 1440px)
+  .fonctionnement
+    height: auto
+    width: auto
+    padding-top: 50px
+    padding-bottom: 50px
+    display: flex
+    flex-direction: column
+    align-items: center
 
-  //   ol
-  //     flex-direction: row
-  //     gap: calc(24px + 12px)
+    &__title
+      padding-top: 0
+      padding-bottom: 25px
+      align-self: flex-start
+    
+    ol
+      flex-direction: row
+      justify-content: space-between
+      max-width: 1053px
+      padding: 0
+      padding-left: calc(20px + (24px / 2))
+      padding-right: 20px
+
+      li
+        width: calc(100% / 3)
+  
+  .sub-fonctionnement
+    max-width: 1053px
+    width: 100%
 
 /********** FIN MEDIA QUERIES **********/
