--- a/assets/mobile_homepage_style.css
+++ b/assets/mobile_homepage_style.css
@@ -81,17 +81,18 @@ header .header__form {
 /********** SECTION EXPLORER **********/
 .explorer {
   background-color: #f6f6f6;
-  height: 287px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 39px;
+  padding-bottom: 57px;
 }
 .explorer__title {
   text-align: center;
   width: 275px;
   height: 68px;
-  margin-bottom: 0;
-  margin-top: 39px;
+  margin: 0;
 }
 .explorer__p {
   font-size: 18px;
@@ -204,7 +205,9 @@ header .header__form {
 /********** FIN SECTION FONCTIONNEMENT **********/
 /********** SECTION RESTAURANTS **********/
 .restaurants {
-  height: 1226px;
+  height: auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
@@ -213,6 +216,7 @@ header .header__form {
 .restaurants__title {
   padding-top: 54px;
   padding-bottom: 24px;
+  padding-left: 20px;
   align-self: flex-start;
 }
 .restaurants__allcards {
@@ -332,12 +336,6 @@ header .header__form {
   rotate: 90deg;
 }
 
-.sub-restaurants {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 @keyframes svg__keyframes--full {
   0% {
     transform: scale(0);
@@ -409,127 +407,7 @@ footer ul li a {
 }
 
 /********** FIN FOOTER **********/
-/********** MEDIA QUERIES **********/
-/* TABLET */
-@media (min-width: 768px) {
-  header .header__maintitle {
-    height: 96px;
-    box-shadow: none;
-  }
-  header .header__title {
-    font-size: 34.2px;
-  }
-  header .header__form {
-    box-shadow: none;
-  }
-  .explorer {
-    height: 179px;
-    padding: 30px 0;
-    gap: 18px;
-  }
-  .explorer__title {
-    font-size: 40px;
-    width: 100%;
-    height: 47px;
-    margin: 0;
-  }
-  .explorer__p {
-    width: 100%;
-    height: 46px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .explorer__button {
-    margin: 0;
-  }
-  .fonctionnement {
-    height: auto;
-    padding-bottom: 50px;
-  }
-  .fonctionnement__title {
-    padding-top: 50px;
-  }
-  .fonctionnement ol {
-    padding-right: 32px;
-  }
-  .fonctionnement li {
-    width: auto;
-  }
-  .fonctionnement__button {
-    width: 100%;
-  }
-  .restaurants {
-    height: auto;
-    padding-bottom: 30px;
-  }
-  .restaurants__title {
-    padding-top: 30px;
-    padding-bottom: 28px;
-  }
-  .restaurants__allcards {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 50px 50px;
-    grid-template-areas: "palette note" "francaise delice";
-    width: calc(100% - 32px - 32px);
-  }
-  .restaurants__singlecard--palette {
-    grid-area: palette;
-  }
-  .restaurants__singlecard--note {
-    grid-area: note;
-  }
-  .restaurants__singlecard--francaise {
-    grid-area: francaise;
-  }
-  .restaurants__singlecard--delice {
-    grid-area: delice;
-  }
-  footer {
-    height: 114px;
-    padding: 30px 25px;
-    flex-direction: row-reverse;
-    align-items: flex-end;
-  }
-  footer ul {
-    display: flex;
-    width: 661px;
-  }
-}
-/* DESKTOP */
-@media (min-width: 1025px) and (max-width: 1440px) {
-  .fonctionnement {
-    height: auto;
-    width: auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .fonctionnement__title {
-    padding-top: 0;
-    padding-bottom: 25px;
-    align-self: flex-start;
-  }
-  .fonctionnement ol {
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 1053px;
-    padding: 0;
-    padding-left: 32px;
-    padding-right: 20px;
-  }
-  .fonctionnement ol li {
-    width: 33.3333333333%;
-  }
-  .sub-fonctionnement {
-    max-width: 1053px;
-    width: 100%;
-  }
-}
-/********** FIN MEDIA QUERIES **********/
+/********** NEW MEDIA QUERIES **********/
+/********** NEW FIN MEDIA QUERIES **********/
 
 /*# sourceMappingURL=mobile_homepage_style.css.map */
