--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -121,17 +121,18 @@ header
 
 .explorer
   background-color: #f6f6f6
-  height: calc(400px - 113px)
+  height: auto
   display: flex
   flex-direction: column
   align-items: center
+  padding-top: 39px
+  padding-bottom: 57px
 
   &__title
     text-align: center
     width: 275px
     height: 68px
-    margin-bottom: 0
-    margin-top: calc(152px - 113px)
+    margin: 0
 
   &__p
     font-size: 18px
@@ -245,7 +246,9 @@ header
 /********** SECTION RESTAURANTS **********/
 
 .restaurants
-  height: calc(2066px - 440px - 400px)
+  height: auto
+  padding-top: 30px
+  padding-bottom: 30px
   background-color: #f6f6f6
   display: flex
   flex-direction: column
@@ -254,6 +257,7 @@ header
   &__title
     padding-top: calc(894px - 440px - 400px)
     padding-bottom: calc(942px - 894px - 24px)
+    padding-left: 20px
     align-self: flex-start
 
   &__allcards
@@ -372,11 +376,6 @@ header
     #restaurants__svg--gradient3,
     #restaurants__svg--gradient4
       rotate: 90deg
-
-.sub-restaurants
-  display: flex
-  flex-direction: column
-  align-items: center
     
 @keyframes svg__keyframes--full
   0%
@@ -451,129 +450,141 @@ footer
 
 /********** FIN FOOTER **********/
 
-/********** MEDIA QUERIES **********/
+/********** NEW MEDIA QUERIES **********/
 
-/* TABLET */
 
-@media (min-width: 768px)
-  header
-    .header
-      &__maintitle
-        height: 96px
-        box-shadow: none
 
-      &__title
-        font-size: 34.2px
+/********** NEW FIN MEDIA QUERIES **********/
+
+// /********** OLD MEDIA QUERIES **********/
+
+// /* TABLET */
+
+// @media (min-width: 768px)
+//   header
+//     .header
+//       &__maintitle
+//         height: 96px
+//         box-shadow: none
+
+//       &__title
+//         font-size: 34.2px
       
-      &__form
-        box-shadow: none
+//       &__form
+//         box-shadow: none
 
-  .explorer
-    height: 179px
-    padding: 30px 0
-    gap: 18px
+//   .explorer
+//     height: 179px
+//     padding: 30px 0
+//     gap: 18px
 
-    &__title
-      font-size: 40px
-      width: 100%
-      height: 47px
-      margin: 0
+//     &__title
+//       font-size: 40px
+//       width: 100%
+//       height: 47px
+//       margin: 0
   
-    &__p
-      width: 100%
-      height: 46px
-      display: flex
-      justify-content: center
-      align-items: center
+//     &__p
+//       width: 100%
+//       height: 46px
+//       display: flex
+//       justify-content: center
+//       align-items: center
     
-    &__button
-      margin: 0
+//     &__button
+//       margin: 0
   
-  .fonctionnement
-    height: auto
-    padding-bottom: 50px
+//   .fonctionnement
+//     display: unset
 
-    &__title
-      padding-top: 50px
+//     &__title
+//       padding-top: 50px
 
-    ol
-      padding-right: 32px
+//     ol
+//       padding-right: 32px
 
-    li
-      width: auto
+//     li
+//       width: auto
     
-    &__button
-      width: 100%
+//     &__button
+//       width: 100%
   
-  .restaurants
-    height: auto
-    padding-bottom: 30px
-
-    &__title
-      padding-top: 30px
-      padding-bottom: 28px
-    
-    &__allcards
-      display: grid
-      grid-template-columns: 1fr 1fr
-      grid-template-rows: 1fr 1fr
-      gap: 50px 50px
-      grid-template-areas: "palette note" "francaise delice"
-      width: calc(100% - 32px - 32px)
-    
-    &__singlecard--palette
-      grid-area: palette
-
-    &__singlecard--note
-      grid-area: note
-
-    &__singlecard--francaise
-      grid-area: francaise
-
-    &__singlecard--delice
-      grid-area: delice
+//   .sub-fonctionnement
+//     align-items: unset
+//     padding-bottom: 50px
   
-  footer
-    height: 114px
-    padding: 30px 25px
-    flex-direction: row-reverse
-    align-items: flex-end
-
-    ul
-      display: flex
-      width: 661px
-
-
-/* DESKTOP */
-
-@media (min-width: 1025px) and (max-width: 1440px)
-  .fonctionnement
-    height: auto
-    width: auto
-    padding-top: 50px
-    padding-bottom: 50px
-    display: flex
-    flex-direction: column
-    align-items: center
-
-    &__title
-      padding-top: 0
-      padding-bottom: 25px
-      align-self: flex-start
+//   .restaurants
+//     &__title
+//       padding-top: 0
+//       padding-bottom: 28px
+//       padding-left: 0
     
-    ol
-      flex-direction: row
-      justify-content: space-between
-      max-width: 1053px
-      padding: 0
-      padding-left: calc(20px + (24px / 2))
-      padding-right: 20px
+//     &__allcards
+//       display: grid
+//       grid-template-columns: 1fr 1fr
+//       grid-template-rows: 1fr 1fr
+//       gap: 50px 50px
+//       grid-template-areas: "palette note" "francaise delice"
+//       width: calc(100% - 20px - 20px)
+    
+//     &__singlecard
+//       box-shadow: none
+    
+//     &__singlecard--palette
+//       grid-area: palette
 
-      li
-        width: calc(100% / 3)
+//     &__singlecard--note
+//       grid-area: note
+
+//     &__singlecard--francaise
+//       grid-area: francaise
+
+//     &__singlecard--delice
+//       grid-area: delice
   
-  .sub-fonctionnement
-    max-width: 1053px
-    width: 100%
+//   .sub-restaurants
+//     width: 375px
+  
+//   footer
+//     height: 114px
+//     padding: 30px 25px
+//     flex-direction: row-reverse
+//     align-items: flex-end
 
-/********** FIN MEDIA QUERIES **********/
+//     ul
+//       display: flex
+//       width: 661px
+
+// /* DESKTOP */
+
+// @media (min-width: 1025px) and (max-width: 1440px)
+//   .fonctionnement
+//     height: auto
+//     width: auto
+//     padding-top: 50px
+//     padding-bottom: 50px
+//     display: flex
+//     flex-direction: column
+//     align-items: center
+
+//     &__title
+//       padding-top: 0
+//       padding-bottom: 25px
+//       align-self: flex-start
+    
+//     ol
+//       flex-direction: row
+//       justify-content: space-between
+//       max-width: 1053px
+//       padding: 0
+//       padding-left: calc(20px + (24px / 2))
+//       padding-right: 20px
+
+//       li
+//         width: calc(100% / 3)
+  
+//   .sub-fonctionnement
+//     max-width: 1053px
+//     width: 100%
+
+// /********** FIN MEDIA QUERIES **********/
