WIP des media queries

--- a/assets/mobile_homepage_style.css
+++ b/assets/mobile_homepage_style.css
@@ -123,16 +123,16 @@ header .header__form {
 /********** FIN SECTION EXPLORER **********/
 /********** SECTION FONCTIONNEMENT **********/
 .fonctionnement {
-  height: 440px;
+  height: auto;
+  padding-top: 48px;
+  padding-bottom: 68px;
   background-color: white;
   display: flex;
-  justify-content: center;
+  padding-left: 20px;
 }
 .fonctionnement__title {
-  padding-top: 48px;
   padding-bottom: 26px;
   align-self: flex-start;
-  padding-left: 20px;
 }
 .fonctionnement ol {
   display: flex;
@@ -141,10 +141,11 @@ header .header__form {
   margin: 0;
   list-style: none;
   counter-reset: li;
-  padding-left: 32px;
+  padding-inline: 0;
 }
 .fonctionnement li {
-  width: 335px;
+  width: 323px;
+  padding-left: 12px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -165,7 +166,7 @@ header .header__form {
   display: flex;
   justify-content: center;
   align-items: center;
-  left: -12px;
+  left: 0;
 }
 .fonctionnement__button {
   width: 322.49px;
@@ -206,17 +207,16 @@ header .header__form {
 /********** SECTION RESTAURANTS **********/
 .restaurants {
   height: auto;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 54px;
+  padding-bottom: 66px;
   background-color: #f6f6f6;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .restaurants__title {
-  padding-top: 54px;
   padding-bottom: 24px;
-  padding-left: 20px;
+  padding-left: 2.5px;
   align-self: flex-start;
 }
 .restaurants__allcards {
@@ -408,6 +408,45 @@ footer ul li a {
 
 /********** FIN FOOTER **********/
 /********** NEW MEDIA QUERIES **********/
+/* BIG PHONE */
+@media (min-width: 376px) and (max-width: 768px) {
+  .fonctionnement {
+    justify-content: center;
+    padding-left: 0;
+  }
+}
+/* TABLET */
+@media (min-width: 768px) and (max-width: 1024px) {
+  header .header__maintitle {
+    height: 96px;
+    box-shadow: none;
+    font-size: 34.2px;
+  }
+  header .header__form {
+    box-shadow: none;
+  }
+  .explorer {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    gap: 18px;
+  }
+  .explorer__title {
+    font-size: 40px;
+    width: unset;
+    height: 47px;
+  }
+  .explorer__p {
+    width: unset;
+    display: flex;
+    align-items: center;
+  }
+  .explorer__button {
+    margin-top: 0;
+  }
+  .restaurants__singlecard {
+    box-shadow: none;
+  }
+}
 /********** NEW FIN MEDIA QUERIES **********/
 
 /*# sourceMappingURL=mobile_homepage_style.css.map */
