--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -164,16 +164,16 @@ header
 /********** SECTION FONCTIONNEMENT **********/
 
 .fonctionnement
-  height: 440px
+  height: auto
+  padding-top: 48px
+  padding-bottom: 68px
   background-color: white
   display: flex
-  justify-content: center
+  padding-left: 20px
 
   &__title
-    padding-top: calc(448px - 400px)
     padding-bottom: 26px
     align-self: flex-start
-    padding-left: 20px
 
   ol
     display: flex
@@ -182,10 +182,11 @@ header
     margin: 0
     list-style: none
     counter-reset: li
-    padding-left: calc(20px + (24px / 2))
+    padding-inline: 0
 
   li
-    width: 335px
+    width: calc(335px - 12px)
+    padding-left: 12px
     display: flex
     flex-direction: row
     align-items: center
@@ -206,7 +207,7 @@ header
       display: flex
       justify-content: center
       align-items: center
-      left: -12px
+      left: 0
 
   &__button
     width: 322.49px
@@ -247,17 +248,16 @@ header
 
 .restaurants
   height: auto
-  padding-top: 30px
-  padding-bottom: 30px
+  padding-top: 54px
+  padding-bottom: 66px
   background-color: #f6f6f6
   display: flex
   flex-direction: column
   align-items: center
 
   &__title
-    padding-top: calc(894px - 440px - 400px)
     padding-bottom: calc(942px - 894px - 24px)
-    padding-left: 20px
+    padding-left: calc(20px - ((375px - 340px) / 2))
     align-self: flex-start
 
   &__allcards
@@ -452,7 +452,46 @@ footer
 
 /********** NEW MEDIA QUERIES **********/
 
+/* BIG PHONE */
 
+@media (min-width: 376px) and (max-width: 768px)
+  .fonctionnement
+    justify-content: center
+    padding-left: 0
+
+/* TABLET */
+
+@media (min-width: 768px) and (max-width: 1024px)
+  header
+    .header__maintitle
+      height: 96px
+      box-shadow: none
+      font-size: 34.2px
+    
+    .header__form
+      box-shadow: none
+  
+  .explorer
+    padding-top: 30px
+    padding-bottom: 30px
+    gap: 18px
+
+    &__title
+      font-size: 40px
+      width: unset
+      height: 47px
+    
+    &__p
+      width: unset
+      display: flex
+      align-items: center
+    
+    &__button
+      margin-top: 0
+  
+  .restaurants
+    &__singlecard
+      box-shadow: none
 
 /********** NEW FIN MEDIA QUERIES **********/
 
