--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -489,9 +489,83 @@ footer
     &__button
       margin-top: 0
   
+  .fonctionnement
+    padding-top: 50px
+    padding-bottom: 50px
+
+    li
+      width: calc(768px - 20px - 20px - 12px)
+    
+    &__button
+      width: 100%
+  
   .restaurants
+    padding-top: 30px
+    padding-bottom: 30px
+
+    &__title
+      padding-bottom: 28px
+
+    &__allcards
+      width: 733px
+      flex-direction: row
+      flex-wrap: wrap
+      gap: 50px 50px
+
     &__singlecard
+      width: calc(((768px - 17.5px - 17.5px) - 50px) / 2)
       box-shadow: none
+
+/* BIG TABLET */
+
+@media (min-width: 769px) and (max-width: 1024px)
+  .fonctionnement
+    justify-content: center
+    padding-left: 0
+
+/* DESKTOP */
+
+@media (min-width: 1024px) and (max-width: 1441px)
+  .fonctionnement
+    ol
+      flex-direction: row
+      gap: 24px
+    
+    li
+      width: calc((1024px - (2 * 20px) - (3 * 12px) - (2 * 24px)) / 3)
+  
+  .restaurants
+    &__allcards
+      width: calc(1024px - (2 * 17.5px))
+      gap: 50px 100px
+  
+    &__singlecard
+      width: calc((1024px - 100px - (2 * 17.5px)) / 2)
+  
+  footer
+    flex-direction: row-reverse
+    height: 114px
+    padding: 57px 25px 30px 0px
+
+    .footer__title
+      width: 139px
+
+    ul
+      display: flex
+      width: 661px
+      height: 20px
+    
+    li
+      width: 130px
+    
+    .footer__proposal,
+    .footer__partner
+      width: 190px
+
+/* BIG DESKTOP */
+
+@media (min-width: 1025px) and (max-width: 1441px)
+  
 
 /********** NEW FIN MEDIA QUERIES **********/
 
