--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -450,7 +450,7 @@ footer
 
 /********** FIN FOOTER **********/
 
-/********** NEW MEDIA QUERIES **********/
+/********** MEDIA QUERIES **********/
 
 /* BIG PHONE */
 
@@ -492,6 +492,9 @@ footer
   .fonctionnement
     padding-top: 50px
     padding-bottom: 50px
+
+    &__title
+      padding-bottom: 25px
 
     li
       width: calc(768px - 20px - 20px - 12px)
@@ -565,139 +568,69 @@ footer
 /* BIG DESKTOP */
 
 @media (min-width: 1025px) and (max-width: 1441px)
-  
-
-/********** NEW FIN MEDIA QUERIES **********/
-
-// /********** OLD MEDIA QUERIES **********/
-
-// /* TABLET */
-
-// @media (min-width: 768px)
-//   header
-//     .header
-//       &__maintitle
-//         height: 96px
-//         box-shadow: none
-
-//       &__title
-//         font-size: 34.2px
+  header
+    .header
+      &__maintitle
+        height: 96px
+        box-shadow: none
       
-//       &__form
-//         box-shadow: none
-
-//   .explorer
-//     height: 179px
-//     padding: 30px 0
-//     gap: 18px
-
-//     &__title
-//       font-size: 40px
-//       width: 100%
-//       height: 47px
-//       margin: 0
+      &__title
+        font-size: 34.2px
+      
+      &__form
+        box-shadow: none
   
-//     &__p
-//       width: 100%
-//       height: 46px
-//       display: flex
-//       justify-content: center
-//       align-items: center
+  .explorer
+    padding-top: 30px
+    padding-bottom: 30px
+    gap: 18px
+
+    &__title
+      width: unset
+      height: 47px
+      font-size: 40px
     
-//     &__button
-//       margin: 0
-  
-//   .fonctionnement
-//     display: unset
-
-//     &__title
-//       padding-top: 50px
-
-//     ol
-//       padding-right: 32px
-
-//     li
-//       width: auto
+    &__p
+      width: unset
+      display: flex
+      align-items: center
     
-//     &__button
-//       width: 100%
+    &__button
+      margin-top: 0
   
-//   .sub-fonctionnement
-//     align-items: unset
-//     padding-bottom: 50px
-  
-//   .restaurants
-//     &__title
-//       padding-top: 0
-//       padding-bottom: 28px
-//       padding-left: 0
+  .fonctionnement
+    padding-top: 50px
+    padding-bottom: 50px
+    padding-left: 0
+    justify-content: center
+
+    &__title
+      padding-bottom: 25px
     
-//     &__allcards
-//       display: grid
-//       grid-template-columns: 1fr 1fr
-//       grid-template-rows: 1fr 1fr
-//       gap: 50px 50px
-//       grid-template-areas: "palette note" "francaise delice"
-//       width: calc(100% - 20px - 20px)
-    
-//     &__singlecard
-//       box-shadow: none
-    
-//     &__singlecard--palette
-//       grid-area: palette
+    ol
+      width: auto
+      max-width: 100vw
+      padding-right: 27px
 
-//     &__singlecard--note
-//       grid-area: note
-
-//     &__singlecard--francaise
-//       grid-area: francaise
-
-//     &__singlecard--delice
-//       grid-area: delice
+    li
+      width: calc((100% - (3 * 12px) - (2 * 24px)) / 3)
   
-//   .sub-restaurants
-//     width: 375px
-  
-//   footer
-//     height: 114px
-//     padding: 30px 25px
-//     flex-direction: row-reverse
-//     align-items: flex-end
+  .restaurants
+    padding-top: 30px
+    padding-bottom: 30px
 
-//     ul
-//       display: flex
-//       width: 661px
-
-// /* DESKTOP */
-
-// @media (min-width: 1025px) and (max-width: 1440px)
-//   .fonctionnement
-//     height: auto
-//     width: auto
-//     padding-top: 50px
-//     padding-bottom: 50px
-//     display: flex
-//     flex-direction: column
-//     align-items: center
-
-//     &__title
-//       padding-top: 0
-//       padding-bottom: 25px
-//       align-self: flex-start
+    &__title
+      padding-bottom: 28px
     
-//     ol
-//       flex-direction: row
-//       justify-content: space-between
-//       max-width: 1053px
-//       padding: 0
-//       padding-left: calc(20px + (24px / 2))
-//       padding-right: 20px
+    &__allcards
+      width: auto
+      max-width: 1080px
+      flex-direction: row
+      flex-wrap: wrap
 
-//       li
-//         width: calc(100% / 3)
-  
-//   .sub-fonctionnement
-//     max-width: 1053px
-//     width: 100%
+    &__singlecard
+      width: calc((100% - 100px) / 2)
+      max-width: 490px
+      box-shadow: none
 
-// /********** FIN MEDIA QUERIES **********/
+/********** FIN MEDIA QUERIES **********/
