--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -26,41 +26,41 @@
 
 /********** LOADER **********/
 
-// .loader__container
-//   position: fixed
-//   inset: 0
-//   animation: loader__container--keyframes 2s ease 3s forwards
+.loader__container
+  position: fixed
+  inset: 0
+  animation: loader__container--keyframes 2s ease 3s forwards
 
-// .site__content
-//   opacity: 0
-//   animation: site__content--keyframes 1s ease 3s forwards
+.site__content
+  opacity: 0
+  animation: site__content--keyframes 1s ease 3s forwards
 
-// .loader
-//   position: absolute
-//   width: 100%
-//   height: 100%
-//   display: flex
-//   justify-content: center
-//   align-items: center
-//   background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
+.loader
+  position: absolute
+  width: 100%
+  height: 100%
+  display: flex
+  justify-content: center
+  align-items: center
+  background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green))
 
-// .loader__svg
-//   stroke-dasharray: 500
-//   stroke-dashoffset: 1000
-//   animation: loader__svg--keyframes 5s infinite linear forwards
+.loader__svg
+  stroke-dasharray: 500
+  stroke-dashoffset: 1000
+  animation: loader__svg--keyframes 5s infinite linear forwards
 
-// @keyframes loader__container--keyframes
-//   to
-//     opacity: 0
-//     visibility: hidden
+@keyframes loader__container--keyframes
+  to
+    opacity: 0
+    visibility: hidden
 
-// @keyframes site__content--keyframes
-//   to
-//     opacity: 1
+@keyframes site__content--keyframes
+  to
+    opacity: 1
 
-// @keyframes loader__svg--keyframes
-//   to
-//     stroke-dashoffset: 0
+@keyframes loader__svg--keyframes
+  to
+    stroke-dashoffset: 0
 
 /********** FIN LOADER **********/
 
