--- a/assets/mobile_homepage_style.css
+++ b/assets/mobile_homepage_style.css
@@ -27,6 +27,49 @@
 
 /********** FIN GENERAL **********/
 /********** LOADER **********/
+.loader__container {
+  position: fixed;
+  inset: 0;
+  animation: loader__container--keyframes 2s ease 3s forwards;
+}
+
+.site__content {
+  opacity: 0;
+  animation: site__content--keyframes 1s ease 3s forwards;
+}
+
+.loader {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(0.25turn, var(--purple), var(--dark-blue), var(--light-blue), var(--light-green), var(--dark-green));
+}
+
+.loader__svg {
+  stroke-dasharray: 500;
+  stroke-dashoffset: 1000;
+  animation: loader__svg--keyframes 5s infinite linear forwards;
+}
+
+@keyframes loader__container--keyframes {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes site__content--keyframes {
+  to {
+    opacity: 1;
+  }
+}
+@keyframes loader__svg--keyframes {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
 /********** FIN LOADER **********/
 /********** HEADER **********/
 header i {
