--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -528,7 +528,7 @@ footer
 
 /* DESKTOP */
 
-@media (min-width: 1024px) and (max-width: 1441px)
+@media (min-width: 1024px)
   .fonctionnement
     ol
       flex-direction: row
@@ -624,7 +624,7 @@ footer
 
 /* BIG DESKTOP */
 
-@media (min-width: 1120px) and (max-width: 1441px)
+@media (min-width: 1120px)
   header
     .header
       &__maintitle
