--- a/sass/mobile_menupage_style.sass
+++ b/sass/mobile_menupage_style.sass
@@ -463,7 +463,7 @@ footer
 
 /* DESKTOP */
 
-@media (min-width: 1024px) and (max-width: 1441px)
+@media (min-width: 1024px)
   header
     height: 96.34px
     font-size: 34.2px
