--- a/assets/mobile_menupage_style.css
+++ b/assets/mobile_menupage_style.css
@@ -451,7 +451,7 @@ footer ul li a {
   }
 }
 /* DESKTOP */
-@media (min-width: 1024px) and (max-width: 1441px) {
+@media (min-width: 1024px) {
   header {
     height: 96.34px;
     font-size: 34.2px;
