Fix du bug du bouton explorer et suppression de l'id du loader

--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -159,6 +159,10 @@ header
       filter: brightness(1.15)
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35)
 
+    a
+      text-decoration: none
+      color: inherit
+
 /********** FIN SECTION EXPLORER **********/
 
 /********** SECTION FONCTIONNEMENT **********/
