--- a/assets/mobile_homepage_style.css
+++ b/assets/mobile_homepage_style.css
@@ -162,6 +162,10 @@ header .header__form {
   filter: brightness(1.15);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
+.explorer__button a {
+  text-decoration: none;
+  color: inherit;
+}
 
 /********** FIN SECTION EXPLORER **********/
 /********** SECTION FONCTIONNEMENT **********/
