--- a/assets/mobile_homepage_style.css
+++ b/assets/mobile_homepage_style.css
@@ -162,7 +162,7 @@ header .header__form {
   filter: brightness(1.15);
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
 }
-.explorer__button a {
+.explorer__link {
   text-decoration: none;
   color: inherit;
 }
