--- a/sass/mobile_homepage_style.sass
+++ b/sass/mobile_homepage_style.sass
@@ -159,9 +159,9 @@ header
       filter: brightness(1.15)
       box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35)
 
-    a
-      text-decoration: none
-      color: inherit
+  &__link
+    text-decoration: none
+    color: inherit
 
 /********** FIN SECTION EXPLORER **********/
 
